--- a/templates/form.html
+++ b/templates/form.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <form>
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Email address</label>
@@ -13,4 +14,4 @@
       <label class="form-check-label" for="exampleCheck1">Check me out</label>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+</form>
