--- a/student-app/templates/homepage.html
+++ b/student-app/templates/homepage.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ID Number Search</title>
+    <title>Student Attendance Tracker</title>
 </head>
 <body>
-    <h1>ID Number Search</h1>
+    <h1>Search by ID</h1>
     <form action="/get_data" method="get">
-        <label for="id_number">Enter ID Number:</label><br>
+        <label for="id_number">Enter your HBID:</label><br>
         <input type="text" id="id_number" name="id" required><br><br>
         <input type="submit" value="Search">
     </form>
