--- a/student-app/templates/display.html
+++ b/student-app/templates/display.html
@@ -6,8 +6,15 @@
 </head>
 <body>
     
-    outreach hrs : {{ data.outreach }}
-    <b></b>
-    tech hrs : {{ data.tech }}
+    {{ data }}
 </body>
+<body>
+    <h1>{{ error_msg }}</h1>
+    <button onclick="goHome()">Return to Search</button>
+</body>
+<script>
+    function goHome() {
+        window.location.href = "/";
+    }
+</script>
 </html>
