--- a/student-app/templates/error.html
+++ b/student-app/templates/error.html
@@ -5,7 +5,7 @@
     <title>Error</title>
 </head>
 <body>
-    <h1>{{ error_msg }}</h1>
+    {{ error_msg }}
     <button onclick="goHome()">Return to Search</button>
 </body>
 <script>
