--- a/student-app/templates/display.html.jinja
+++ b/student-app/templates/display.html.jinja
@@ -17,7 +17,7 @@
 <div class="is-hidden" id="varsity-progress">
   <div class="tabs">
   <ul>
-    <li data-target="track-a" class="is-active"><a>Track A/a></li>
+    <li data-target="track-a" class="is-active"><a>Track A</a></li>
     <li data-target="track-b"><a>Track B</a></li>
   </ul>
   </div>
