becoming dumber and also adding team meeting attendance bar

--- a/student-app/templates/display.html.jinja
+++ b/student-app/templates/display.html.jinja
@@ -6,35 +6,31 @@
 <div class="tabs">
   <ul>
     <li data-target="jv-progress" class="is-active"><a>Junior Varsity</a></li>
-    <li data-target="varsity-progress"><a>Varsity</a></li>
+    <li data-target="varsity-a"><a>Varsity (Track A)</a></li>
+    <li data-target="varsity-b"><a>Varsity (Track B)</a></li>
     <li data-target="honors-progress"><a>Honors</a></li>
   </ul>
 </div>
 <div id="jv-progress">
   {{ unitime_progress("jv-pre", "Pre-Season (September-November)", data.pre_hrs, data.pre_target) }}
   {{ unitime_progress("jv-build", "Build Season (January-February)", data.build_hrs, data.jv_build) }}
+  {{ unitime_progress("meet_attendance", "Team Meeting Attendance (Saturdays 4-5pm)", data.meet_attendance, 8) }}
 </div>
-<div class="is-hidden" id="varsity-progress">
-  <div class="tabs">
-  <ul>
-    <li data-target="track-a" class="is-active"><a>Track A</a></li>
-    <li data-target="track-b"><a>Track B</a></li>
-  </ul>
-  </div>
-  <div id="track-a">
-    {{ unitime_progress("varsity-pre", "Pre-Season (September-November)", data.pre_hrs, data.pre_target) }}
-    {{ unitime_progress("varsity-build", "Build Season (January-February)", data.build_hrs, data.v_build) }}
-    {{ unitime_progress("varsity-outreach", "Outreach Hours", data.outreach_hrs, data.outreach_target) }}
-    {{ unitime_progress("varsity-business", "Business Objectives", data.biz_obj, 3) }}
-    {{ unitime_progress("varsity-business-req", "Business Fundraising", data.biz_fund, 100) }}
-  </div>
-  <div class="is-hidden" id="track-b">
-    {{ unitime_progress("varsity-pre", "Pre-Season (September-November)", data.pre_hrs, data.pre_target) }}
-    {{ unitime_progress("varsity-tech", "Total Tech Hours", data.tech_hrs, data.tech_target) }}
-    {{ unitime_progress("varsity-outreach", "Outreach Hours", data.outreach_hrs, data.outreach_target) }}
-    {{ unitime_progress("varsity-business", "Business Objectives", data.biz_obj, 3) }}
-    {{ unitime_progress("varsity-business-req", "Business Fundraising", data.biz_fund, 100) }}
-  </div>
+<div class="is-hidden" id="varsity-a">
+  {{ unitime_progress("varsity-pre", "Pre-Season (September-November)", data.pre_hrs, data.pre_target) }}
+  {{ unitime_progress("varsity-build", "Build Season (January-February)", data.build_hrs, data.v_build) }}
+  {{ unitime_progress("meet_attendance", "Team Meeting Attendance (Saturdays 4-5pm)", data.meet_attendance, 8) }}
+  {{ unitime_progress("varsity-outreach", "Outreach Hours", data.outreach_hrs, data.outreach_target) }}
+  {{ unitime_progress("varsity-business", "Business Objectives", data.biz_obj, 3) }}
+  {{ unitime_progress("varsity-business-req", "Business Fundraising", data.biz_fund, 100) }}
+</div>
+<div class="is-hidden" id="varsity-b">
+  {{ unitime_progress("varsity-pre", "Pre-Season (September-November)", data.pre_hrs, data.pre_target) }}
+  {{ unitime_progress("varsity-tech", "Total Tech Hours", data.tech_hrs, data.tech_target) }}
+  {{ unitime_progress("meet_attendance", "Team Meeting Attendance (Saturdays 4-5pm)", data.meet_attendance, 8) }}
+  {{ unitime_progress("varsity-outreach", "Outreach Hours", data.outreach_hrs, data.outreach_target) }}
+  {{ unitime_progress("varsity-business", "Business Objectives", data.biz_obj, 3) }}
+  {{ unitime_progress("varsity-business-req", "Business Fundraising", data.biz_fund, 100) }}
 </div>
 <div class="is-hidden" id="honors-progress">
   {{ unitime_progress("honors-tech", "Total Tech Hours", data.tech_hrs, 250) }}
